Implemented validator api
